fix reveal style z-index for content when menu was after content in DOM

--- a/app/styles/ember-mobile-menu.scss
+++ b/app/styles/ember-mobile-menu.scss
@@ -34,6 +34,10 @@ body.mobile-menu--open {
     &--shadow {
       box-shadow: 0 5px 10px rgba(0,0,0,0.3);
     }
+
+    &--ios, &--reveal, &--squeeze-reveal {
+      z-index: 2;
+    }
   }
 }
 
@@ -77,7 +81,7 @@ body.mobile-menu--open {
     width: 100vw;
     height: 100vh;
 
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.3);
     opacity: 0;
     cursor: pointer; // necessary to detect click on iOS
 
